add some html content

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@ layout: default
 ---
 
 <div class="home">
-    <h1 class="header">Hey, my name is Andy.</h1>
+    <h1 class="header">Hey, my name is <b>Andy</b>.</h1>
+    <div class="below-game">
+        <p class="block-text">I like building things using the latest, coolest technologies.  Like <a href="http://phaser.io" target="_blank">Phaser</a>, the WebGL accellerated HTML5 game engine powering this page.</p>
+    </div>
 </div>
