--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ layout: default
 <div class="home">
     <h1 class="header">Hey, my name is <b>Andy</b>.</h1>
     <div class="below-game">
-        <p class="block-text">I like building things using the latest, coolest technologies.  Like <a href="http://phaser.io" target="_blank">Phaser</a>, the WebGL accellerated HTML5 game engine powering this page.</p>
-        <h2>I have a passion for video games.</h2>
+        <p class="block-text">I like building things using the latest, coolest technologies.  Like <a href="http://phaser.io" target="_blank" class="clickable">Phaser</a>, the WebGL accellerated HTML5 game engine powering this page.</p>
+        <h1>I have a passion for...</h1>
+        <button class="spawner clickable">Games</button>
     </div>
 </div>
