--- a/index.html
+++ b/index.html
@@ -6,7 +6,59 @@ layout: default
     <h1 class="header">Hey, my name is <b>Andy</b>.</h1>
     <div class="below-game">
         <p class="block-text">I like building things using the latest, coolest technologies.  Like <a href="http://phaser.io" target="_blank" class="clickable">Phaser</a>, the WebGL accellerated HTML5 game engine powering this page.</p>
-        <h1>Placeholder</h1>
-        <button class="spawner clickable">Placeholder Spawner</button>
+        <h1 class="passion-for">I have a passion for...</h1>
+        <div class="vert-line"></div>
+        <ul class="interests">
+            <li>
+                <div class="code-section">
+                    <div class="gradient"></div>
+                    {% image code.png class="interest-label" %}
+                    <div class="section-content">
+                        <div class="section-text">
+                            I like touching every piece of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and adding rich client-side interfaces built on Backbone.
+                        </div>
+                        <div class="page_source">
+                            Check out the source for this page.
+                        </div>
+                        <div class="resume">
+                            Look at my resume.
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="game-section">
+                    <div class="gradient"></div>
+                    {% image games.png class="interest-label" %}
+                    <div class="section-content">
+                        <div class="section-text">
+                            Placeholder
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="music-section">
+                    <div class="gradient"></div>
+                    {% image music.png class="interest-label" %}
+                    <div class="section-content">
+                        <div class="section-text">
+                            Placeholder
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="mountain-section">
+                    <div class="gradient"></div>
+                    {% image mountains.png class="interest-label" %}
+                    <div class="section-content">
+                        <div class="section-text">
+                            Placeholder
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
     </div>
 </div>
