more layout and content in place

--- a/index.html
+++ b/index.html
@@ -4,57 +4,96 @@ layout: default
 
 <div class="home">
     <h1 class="header">Hey, my name is <b>Andy</b>.</h1>
-    <div class="below-game">
+    <div class="spacer">
         <p class="block-text">I like building things using the latest, coolest technologies.  Like <a href="http://phaser.io" target="_blank" class="clickable">Phaser</a>, the WebGL accellerated HTML5 game engine powering this page.</p>
         <h1 class="passion-for">I have a passion for...</h1>
-        <div class="vert-line"></div>
+    </div>
+    <div class="below-game">
         <ul class="interests">
             <li>
                 <div class="code-section">
-                    <div class="gradient"></div>
                     {% image code.png class="interest-label" %}
                     <div class="section-content">
-                        <div class="section-text">
-                            I like touching every piece of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and adding rich client-side interfaces built on Backbone.
-                        </div>
-                        <div class="page_source">
-                            Check out the source for this page.
-                        </div>
-                        <div class="resume">
-                            Look at my resume.
+                        I like <b>understanding</b> and crafting every layer of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and creating rich client side interfaces built on Backbone.
+                        <div class="controls">
+                            <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
+                                <span class="octicon octicon-file-code"></span><br/>
+                                Page Source
+                            </a>
+                            <a class="control">
+                                <span class="octicon octicon-file-text"></span><br/>
+                                My Resume
+                            </a>
+                            <a class="control" href="https://github.com/andycreeth" target="_blank">
+                                <span class="octicon octicon-mark-github"></span><br/>
+                                My Code
+                            </a>
                         </div>
                     </div>
                 </div>
             </li>
             <li>
                 <div class="game-section">
-                    <div class="gradient"></div>
                     {% image games.png class="interest-label" %}
                     <div class="section-content">
-                        <div class="section-text">
-                            Placeholder
+                        I like <b>understanding</b> and crafting every layer of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and creating rich client side interfaces built on Backbone.
+                        <div class="controls">
+                            <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
+                                <span class="octicon octicon-file-code"></span><br/>
+                                Page Source
+                            </a>
+                            <a class="control">
+                                <span class="octicon octicon-file-text"></span><br/>
+                                My Resume
+                            </a>
+                            <a class="control" href="https://github.com/andycreeth" target="_blank">
+                                <span class="octicon octicon-mark-github"></span><br/>
+                                My Code
+                            </a>
                         </div>
                     </div>
                 </div>
             </li>
             <li>
                 <div class="music-section">
-                    <div class="gradient"></div>
                     {% image music.png class="interest-label" %}
                     <div class="section-content">
-                        <div class="section-text">
-                            Placeholder
+                        I like <b>understanding</b> and crafting every layer of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and creating rich client side interfaces built on Backbone.
+                        <div class="controls">
+                            <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
+                                <span class="octicon octicon-file-code"></span><br/>
+                                Page Source
+                            </a>
+                            <a class="control">
+                                <span class="octicon octicon-file-text"></span><br/>
+                                My Resume
+                            </a>
+                            <a class="control" href="https://github.com/andycreeth" target="_blank">
+                                <span class="octicon octicon-mark-github"></span><br/>
+                                My Code
+                            </a>
                         </div>
                     </div>
                 </div>
             </li>
             <li>
                 <div class="mountain-section">
-                    <div class="gradient"></div>
                     {% image mountains.png class="interest-label" %}
                     <div class="section-content">
-                        <div class="section-text">
-                            Placeholder
+                        I like <b>understanding</b> and crafting every layer of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and creating rich client side interfaces built on Backbone.
+                        <div class="controls">
+                            <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
+                                <span class="octicon octicon-file-code"></span><br/>
+                                Page Source
+                            </a>
+                            <a class="control">
+                                <span class="octicon octicon-file-text"></span><br/>
+                                My Resume
+                            </a>
+                            <a class="control" href="https://github.com/andycreeth" target="_blank">
+                                <span class="octicon octicon-mark-github"></span><br/>
+                                My Code
+                            </a>
                         </div>
                     </div>
                 </div>
