some major layout changes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@ layout: default
 
 <div class="home">
     <h1 class="header">Hey, my name is <b>Andy</b>.</h1>
-    <div class="spacer">
-        <p class="block-text">I like building things using the latest, coolest technologies.  Like <a href="http://phaser.io" target="_blank" class="clickable">Phaser</a>, the WebGL accellerated HTML5 game engine powering this page.</p>
-        <h1 class="passion-for">I have a passion for...</h1>
-    </div>
+    <div class="spacer"></div>
     <div class="below-game">
+        <h1 class="passion-for">I have a passion for...</h1>
         <ul class="interests">
             <li>
                 <div class="code-section">
@@ -36,7 +34,7 @@ layout: default
                 <div class="game-section">
                     {% image games.png class="interest-label" %}
                     <div class="section-content">
-                        I like <b>understanding</b> and crafting every layer of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and creating rich client side interfaces built on Backbone.
+                        
                         <div class="controls">
                             <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
                                 <span class="octicon octicon-file-code"></span><br/>
@@ -80,7 +78,8 @@ layout: default
                 <div class="mountain-section">
                     {% image mountains.png class="interest-label" %}
                     <div class="section-content">
-                        I like <b>understanding</b> and crafting every layer of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and creating rich client side interfaces built on Backbone.
+                        Personal Summit Superlatives:
+                        
                         <div class="controls">
                             <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
                                 <span class="octicon octicon-file-code"></span><br/>
