fix game scaling and add mountain contentx

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="home">
+    <div id="game-container"></div>
     <h1 class="header">Hey, my name is <b>Andy</b>.</h1>
     <div class="spacer"></div>
     <div class="below-game">
@@ -36,17 +37,9 @@ layout: default
                     <div class="section-content">
                         
                         <div class="controls">
-                            <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
-                                <span class="octicon octicon-file-code"></span><br/>
-                                Page Source
-                            </a>
-                            <a class="control">
-                                <span class="octicon octicon-file-text"></span><br/>
-                                My Resume
-                            </a>
-                            <a class="control" href="https://github.com/andycreeth" target="_blank">
-                                <span class="octicon octicon-mark-github"></span><br/>
-                                My Code
+                            <a class="control spawner">
+                                <span class="octicon octicon-person"></span><br/>
+                                Click for Awesome
                             </a>
                         </div>
                     </div>
@@ -78,20 +71,15 @@ layout: default
                 <div class="mountain-section">
                     {% image mountains.png class="interest-label" %}
                     <div class="section-content">
-                        Personal Summit Superlatives:
-                        
+                        On June 24th 2014 I reached the summit of Mt. Rainier.  It was the culmination of a year of training, focus, and determination. I'm hoping that the future will bring many more successful summits, both literal and metaphorical.  
                         <div class="controls">
-                            <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
-                                <span class="octicon octicon-file-code"></span><br/>
-                                Page Source
+                            <a class="control show-view">
+                                <span class="octicon octicon-device-camera"></span><br/>
+                                View From the Top
                             </a>
-                            <a class="control">
-                                <span class="octicon octicon-file-text"></span><br/>
-                                My Resume
-                            </a>
-                            <a class="control" href="https://github.com/andycreeth" target="_blank">
-                                <span class="octicon octicon-mark-github"></span><br/>
-                                My Code
+                            <a class="control fancybox fancybox.iframe" href="https://www.youtube.com/embed/UAl1Ugsv4t4?autoplay=1">
+                                <span class="octicon octicon-device-camera-video"></span><br/>
+                                Watch the Video
                             </a>
                         </div>
                     </div>
