--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
                 <div class="code-section">
                     {% image code.png class="interest-label" %}
                     <div class="section-content">
-                        I like <b>understanding</b> and crafting every layer of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and creating rich client side interfaces built on Backbone.
+                        I like <b>understanding</b> and crafting every layer of the application stack.  Lately I've been experimenting with <a href="http://phaser.io" target="_blank">Phaser</a>, the WebGL accelerated HTML5 game engine powering this page.
                         <div class="controls">
                             <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
                                 <span class="octicon octicon-file-code"></span><br/>
@@ -35,7 +35,7 @@ layout: default
                 <div class="game-section">
                     {% image games.png class="interest-label" %}
                     <div class="section-content">
-                        
+                        Games have been a lifelong hobby of mine.  I strive to bring elements of gameplay into the interfaces that I build.
                         <div class="controls">
                             <a class="control spawner">
                                 <span class="octicon octicon-person"></span><br/>
@@ -49,19 +49,11 @@ layout: default
                 <div class="music-section">
                     {% image music.png class="interest-label" %}
                     <div class="section-content">
-                        I like <b>understanding</b> and crafting every layer of the application stack.  Lately I've been building large distributed backend applications with Ruby on Rails, and creating rich client side interfaces built on Backbone.
+                        Making music is one of my favorite forms of artistic <b>expression</b>.  I play the piano, and I mix and record electronic music.  Lately, I've been working on the soundtrack for a video game that was recently greenlit on Steam called Retrograde.
                         <div class="controls">
-                            <a class="control" href="https://github.com/andycreeth/personal-site" target="_blank">
-                                <span class="octicon octicon-file-code"></span><br/>
-                                Page Source
-                            </a>
-                            <a class="control">
-                                <span class="octicon octicon-file-text"></span><br/>
-                                My Resume
-                            </a>
-                            <a class="control" href="https://github.com/andycreeth" target="_blank">
-                                <span class="octicon octicon-mark-github"></span><br/>
-                                My Code
+                            <a class="control" href="http://playretrograde.com/" target="_blank">
+                                <span class="octicon octicon-rocket"></span><br/>
+                                Play Retrograde
                             </a>
                         </div>
                     </div>
@@ -71,7 +63,7 @@ layout: default
                 <div class="mountain-section">
                     {% image mountains.png class="interest-label" %}
                     <div class="section-content">
-                        On June 24th 2014 I reached the summit of Mt. Rainier.  It was the culmination of a year of training, focus, and determination. I'm hoping that the future will bring many more successful summits, both literal and metaphorical.  
+                        On June 24th 2014 I reached the summit of Mt. Rainier.  It was the culmination of a year of training, focus, and <b>determination</b>. I'm hoping that the future will bring many more successful summits, both literal and metaphorical.  
                         <div class="controls">
                             <a class="control show-view">
                                 <span class="octicon octicon-device-camera"></span><br/>
