--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
                                 <span class="octicon octicon-file-code"></span><br/>
                                 Page Source
                             </a>
-                            <a class="control">
+                            <a class="control fancybox" href="{% asset_path resume.pdf %}">
                                 <span class="octicon octicon-file-text"></span><br/>
                                 My Resume
                             </a>
@@ -69,7 +69,7 @@ layout: default
                                 <span class="octicon octicon-device-camera"></span><br/>
                                 View From the Top
                             </a>
-                            <a class="control fancybox fancybox.iframe" href="https://www.youtube.com/embed/UAl1Ugsv4t4?autoplay=1">
+                            <a class="control fancybox" href="https://www.youtube.com/embed/UAl1Ugsv4t4?autoplay=1">
                                 <span class="octicon octicon-device-camera-video"></span><br/>
                                 Watch the Video
                             </a>
