ditch fancybox for resume

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
                                 <span class="octicon octicon-file-code"></span><br/>
                                 Page Source
                             </a>
-                            <a class="control fancybox" href="{% asset_path resume.pdf %}">
+                            <a class="control" href="{% asset_path resume.pdf %}" target="_blank">
                                 <span class="octicon octicon-file-text"></span><br/>
                                 My Resume
                             </a>
